Refactoring to book

--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -1,15 +1,16 @@
-\documentclass[a4paper,12pt]{article}
-\usepackage[utf8]{inputenc}
+\documentclass[a4paper,12pt]{book}
 \usepackage{calc}
 \usepackage{setspace}
 \usepackage{fixltx2e}
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage[normalem]{ulem}
-\usepackage[italian]{babel}
+\usepackage{microtype}     % microtypography, reduces hyphenation
 \usepackage{color}
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{polyglossia}   % language selection
+\setmainlanguage{italian}
 
 \frenchspacing
 
